--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,7 @@ html {
 }
 
 main {
-  margin-top: 20vh;
+  margin-top: 21vh;
 }
 
 a {
